--- a/templates/Employee/login.html
+++ b/templates/Employee/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="signin.css" rel="stylesheet">
+        <link rel="stylesheet" href="signin.css" >
   </head>
   <body>
     <div class="container">
@@ -10,7 +10,7 @@
         <h2 class="signin-heading">Employee Login</h2>
           <label for="inputID">Employee ID</label>
           <input type="ID" id="inputID" class="form-control" placeholder="Employee ID" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
+          <label for="inputPassword">Password</label>
           <input type="Password" id="inputPassword" class="form-control" placeholder="Password" required autofocus>
           <br>
           <a href="main.html" class="btn btn-lg btn-primary btn-block" type="submit">Log In</a>
