--- a/templates/Employee/login.html
+++ b/templates/Employee/login.html
@@ -8,9 +8,9 @@
     <div class="container">
       <form class="signin">
         <h2 class="signin-heading">Employee Login</h2>
-          <label for="inputID">Employee ID</label>
+          <label for="inputID" class="sr-only">Employee ID</label>
           <input type="ID" id="inputID" class="form-control" placeholder="Employee ID" required autofocus>
-          <label for="inputPassword">Password</label>
+          <label for="inputPassword" class="sr-only">Password</label>
           <input type="Password" id="inputPassword" class="form-control" placeholder="Password" required autofocus>
           <br>
           <a href="main.html" class="btn btn-lg btn-primary btn-block" type="submit">Log In</a>
