Update 8/4 to include privacy statement

--- a/templates/Employee/login.html
+++ b/templates/Employee/login.html
@@ -18,4 +18,7 @@
         </form>
       </div>
     </div>
+        <br>
+        <p>For the privacy of all of our patients, please ensure you logoff after checking in patients</p>
+  </body>
 </html>
