--- a/templates/Employee/signin.css
+++ b/templates/Employee/signin.css
@@ -1,7 +1,13 @@
 body {
+  text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #ccc;
+}
+p {
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 .frame {
   max-width: 370px;
