--- a/templates/Employee/login.html
+++ b/templates/Employee/login.html
@@ -13,7 +13,7 @@
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="Password" id="inputPassword" class="form-control" placeholder="Password" required autofocus>
           <br>
-          <a href="main.html" class="btn btn-lg btn-primary btn-block" type="submit">Log In</a>
+          <a href="checkin.html" class="btn btn-lg btn-primary btn-block" type="submit">Log In</a>
       </form>
     </div>
     <br>
