--- a/templates/Employee/checkin.html
+++ b/templates/Employee/checkin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Patient Check-In</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <link rel="stylesheet" href="employee.css" >
   </head>
@@ -15,15 +16,15 @@
             <div class="col-xs-2" style="border: #ccc">Doctor's Name</div>
             <div class="col-xs-2" style="border: #ccc">New Patient</div>
           </div>
-          <a href="detail.html" class="row" type="submit">
-            <div class="col-xs-3">Brown</div>
-            <div class="col-xs-1">S</div>
-            <div class="col-xs-2">9:00 AM</div>
-            <div class="col-xs-2">9:15 AM</div>
-            <div class="col-xs-2">Michaliszyn</div>
-            <div class="col-xs-2">X</div>
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
+              <div class="col-xs-3">Brown</div>
+              <div class="col-xs-1">S</div>
+              <div class="col-xs-2">9:00 AM</div>
+              <div class="col-xs-2">9:15 AM</div>
+              <div class="col-xs-2">Michaliszyn</div>
+              <div class="col-xs-2">X</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+            <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">McMinn</div>
             <div class="col-xs-1">E</div>
             <div class="col-xs-2">9:15 AM</div>
@@ -31,7 +32,7 @@
             <div class="col-xs-2">Boston</div>
             <div class="col-xs-2">-</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Davis</div>
             <div class="col-xs-1">B</div>
             <div class="col-xs-2">9:45 AM</div>
@@ -39,7 +40,7 @@
             <div class="col-xs-2">-</div>
             <div class="col-xs-2">-</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Heald</div>
             <div class="col-xs-1">S</div>
             <div class="col-xs-2">9:45 AM</div>
@@ -47,7 +48,7 @@
             <div class="col-xs-2">Blanchard</div>
             <div class="col-xs-2">-</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Curry</div>
             <div class="col-xs-1">S</div>
             <div class="col-xs-2">10:00 AM</div>
@@ -55,7 +56,7 @@
             <div class="col-xs-2">Boston</div>
             <div class="col-xs-2">X</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Ciampitti</div>
             <div class="col-xs-1">J</div>
             <div class="col-xs-2">10:00 AM</div>
@@ -63,7 +64,7 @@
             <div class="col-xs-2">-</div>
             <div class="col-xs-2">X</div>
           </a>
-          <a href="detail.html" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Brown</div>
             <div class="col-xs-1">K</div>
             <div class="col-xs-2">10:00 AM</div>
@@ -75,7 +76,78 @@
           <p>For the privacy of all of our patients, please ensure you logoff after checking in patients</p>
         <div class="frame" style="border: 0px; float: right">
         <a href="login.html" class="btn btn-lg btn-primary btn-block" type="submit">Log Out</a>
-      </div>
+        </div>
+        <div class="detail" id="detail1" opacity="5%">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-3 form-group">
+                <label>Last Name</label>
+                <input class="form-control" placeholder="Brown" type="text"/>
+              </div>
+              <div class="col-xs-2 form-group">
+                <label>First Name</label>
+                <input class="form-control" placeholder="Steve" type="text"/>
+              </div>
+              <div class="col-xs-2 form-group">
+                <label>Check In</label>
+                <input class="form-control" placeholder="9:00 AM" type="text"/>
+              </div>
+              <div class="col-xs-2 form-group">
+                <label>Appt Time</label>
+                <input class="form-control" placeholder="9:15 AM" type="text"/>
+              </div>
+              <div class="col-xs-2 form-group">
+                <label>Doctor</label>
+                <input class="form-control" placeholder="Michaliszyn" type="text"/>
+              </div>
+              <div class="col-xs-1 form-group">
+                <label>New</label>
+                <input class="form-control" placeholder="Yes" type="text"/>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-4 form-group">
+                <label>Address</label>
+                <input class="form-control" placeholder="1347 First Street Conroe, TX 77304" type="text"/>
+              </div>
+              <div class="col-xs-3 form-group">
+                <label>Primary Contact</label>
+                <input class="form-control" placeholder="(832)-555-5555" type="text"/>
+              </div>
+              <div class="col-xs-1 form-group">
+                <label>Type</label>
+                <input class="form-control" placeholder="Cell" type="text"/>
+              </div>
+              <div class="col-xs-3 form-group">
+                <label>Secondary Contact</label>
+                <input class="form-control" placeholder="(713)-555-5555" type="text"/>
+              </div>
+              <div class="col-xs-1 form-group">
+                <label>Type</label>
+                <input class="form-control" placeholder="Work" type="text"/>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <label>Reason for Visist</label>
+              <textarea class="form-control" rows="5" placeholder="New Patient Physical"></textarea>
+            </div>
+          <div class="frame" style="border: 0px; float: right">
+          <a href="#" class="btn btn-lg btn-primary btn-block" onclick="hide('detail1')">Verify</a>
+          </div>
+        </div>
+        </div>
     </div>
-  </body>
+    </body>
+    <script>
+    $ = function(id) {
+      return document.getElementById(id);
+    }
+    var show = function(id) {
+	     $(id).style.display ='block';
+     }
+    var hide = function(id) {
+	      $(id).style.display ='none';
+    }
+    </script>
 </html>
