--- a/templates/Employee/employee.css
+++ b/templates/Employee/employee.css
@@ -1,11 +1,8 @@
 body {
-    padding-top: 40px;
+  overf
+  padding-top: 40px;
   padding-bottom: 40px;
   background-color: #ccc;
-}
-a {
-  margin-bottom: 0px;
-  margin-top: 0px;
 }
 h2 {
   text-align: center;
@@ -63,7 +60,23 @@ p {
   padding-top: 15px;
   padding-bottom: 15px;
   margin-top: 0px;
-  margin-bottom: -20px;
+  margin-bottom: -15px;
   background-color: #ddd;
   border: 1px solid #000;
+}
+#detail1 {
+  -webkit-box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
+  box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
+  background-color: #ccc;
+}
+.detail {
+  display: none;
+  position: fixed;
+  opacity: 5%;
+  padding: 10px;
+  width: 90%;
+  left: 5%;
+  height: 50%;
+  top: 5%;
+  background #aaa;
 }
