--- a/templates/Employee/checkin.html
+++ b/templates/Employee/checkin.html
@@ -149,5 +149,23 @@
     var hide = function(id) {
 	      $(id).style.display ='none';
     }
+    function idleTimer() {
+    var t;
+    //window.onload = resetTimer;
+    window.onmousemove = resetTimer; // catches mouse movements
+    window.onmousedown = resetTimer; // catches mouse movements
+    window.onclick = resetTimer;     // catches mouse clicks
+    window.onscroll = resetTimer;    // catches scrolling
+    window.onkeypress = resetTimer;  //catches keyboard actions
+
+    function logout() {
+        window.location.href = '/action/logout';  //Adapt to actual logout script
+    }
+    function resetTimer() {
+        clearTimeout(t);
+        t = setTimeout(logout, 10000);  // time is in milliseconds (1000 is 1 second)
+    }
+    }
+idleTimer();
     </script>
 </html>
