--- a/templates/Employee/checkin.html
+++ b/templates/Employee/checkin.html
@@ -159,7 +159,7 @@
     window.onkeypress = resetTimer;  //catches keyboard actions
 
     function logout() {
-        window.location.href = '/action/logout';  //Adapt to actual logout script
+        window.location.href = 'login.html';  //Adapt to actual logout script
     }
     function resetTimer() {
         clearTimeout(t);
