--- a/templates/Employee/checkin.html
+++ b/templates/Employee/checkin.html
@@ -17,28 +17,28 @@
             <div class="col-xs-2" style="border: #ccc">New Patient</div>
           </div>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
-              <div class="col-xs-3">Brown</div>
-              <div class="col-xs-1">S</div>
-              <div class="col-xs-2">9:00 AM</div>
-              <div class="col-xs-2">9:15 AM</div>
-              <div class="col-xs-2">Michaliszyn</div>
-              <div class="col-xs-2">X</div>
+            <div class="col-xs-3">Brown</div>
+            <div class="col-xs-1">S</div>
+            <div class="col-xs-2">9:00 AM</div>
+            <div class="col-xs-2">9:15 AM</div>
+            <div class="col-xs-2">Michaliszyn</div>
+            <div class="col-xs-2">Yes</div>
           </a>
-            <a href="#" onclick="show('detail1')" class="row" type="submit">
+          <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">McMinn</div>
             <div class="col-xs-1">E</div>
             <div class="col-xs-2">9:15 AM</div>
             <div class="col-xs-2">9:30 AM</div>
             <div class="col-xs-2">Boston</div>
-            <div class="col-xs-2">-</div>
+            <div class="col-xs-2">No</div>
           </a>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Davis</div>
             <div class="col-xs-1">B</div>
             <div class="col-xs-2">9:45 AM</div>
             <div class="col-xs-2">Walk In</div>
-            <div class="col-xs-2">-</div>
-            <div class="col-xs-2">-</div>
+            <div class="col-xs-2">None Listed</div>
+            <div class="col-xs-2">No</div>
           </a>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Heald</div>
@@ -46,7 +46,7 @@
             <div class="col-xs-2">9:45 AM</div>
             <div class="col-xs-2">9:45 AM</div>
             <div class="col-xs-2">Blanchard</div>
-            <div class="col-xs-2">-</div>
+            <div class="col-xs-2">No</div>
           </a>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Curry</div>
@@ -54,15 +54,15 @@
             <div class="col-xs-2">10:00 AM</div>
             <div class="col-xs-2">10:30 AM</div>
             <div class="col-xs-2">Boston</div>
-            <div class="col-xs-2">X</div>
+            <div class="col-xs-2">Yes</div>
           </a>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Ciampitti</div>
             <div class="col-xs-1">J</div>
             <div class="col-xs-2">10:00 AM</div>
             <div class="col-xs-2">Walk In</div>
-            <div class="col-xs-2">-</div>
-            <div class="col-xs-2">X</div>
+            <div class="col-xs-2">None Listed</div>
+            <div class="col-xs-2">Yes</div>
           </a>
           <a href="#" onclick="show('detail1')" class="row" type="submit">
             <div class="col-xs-3">Brown</div>
@@ -70,74 +70,74 @@
             <div class="col-xs-2">10:00 AM</div>
             <div class="col-xs-2">10:30 AM</div>
             <div class="col-xs-2">Michaliszyn</div>
-            <div class="col-xs-2">-</div>
+            <div class="col-xs-2">No</div>
           </a>
         <br>
           <p>For the privacy of all of our patients, please ensure you logoff after checking in patients</p>
         <div class="frame" style="border: 0px; float: right">
-        <a href="login.html" class="btn btn-lg btn-primary btn-block" type="submit">Log Out</a>
+          <a href="login.html" class="btn btn-lg btn-primary btn-block" type="submit">Log Out</a>
         </div>
-        <div class="detail" id="detail1" opacity="5%">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-3 form-group">
-                <label>Last Name</label>
-                <input class="form-control" placeholder="Brown" type="text"/>
+          <div class="detail" id="detail1" opacity="5%">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-3 form-group">
+                  <label>Last Name</label>
+                  <input class="form-control" value="Brown" type="text" readonly/>
+                </div>
+                <div class="col-xs-2 form-group">
+                  <label>First Name</label>
+                  <input class="form-control" value="Steve" type="text" readonly/>
+                </div>
+                <div class="col-xs-2 form-group">
+                  <label>Check In</label>
+                  <input class="form-control" value="9:00 AM" type="text" readonly/>
+                </div>
+                <div class="col-xs-2 form-group">
+                  <label>Appt Time</label>
+                  <input class="form-control" value="9:15 AM" type="text" readonly/>
+                </div>
+                <div class="col-xs-2 form-group">
+                  <label>Doctor</label>
+                  <input class="form-control" value="Michaliszyn" type="text"/>
+                </div>
+                <div class="col-xs-1 form-group">
+                  <label>New</label>
+                  <input class="form-control" placeholder="Yes" type="text" readonly/>
+                </div>
               </div>
-              <div class="col-xs-2 form-group">
-                <label>First Name</label>
-                <input class="form-control" placeholder="Steve" type="text"/>
+              <div class="row">
+                <div class="col-xs-4 form-group">
+                  <label>Address</label>
+                  <input class="form-control" value="1347 First Street Conroe, TX 77304" type="text"/>
+                </div>
+                <div class="col-xs-3 form-group">
+                  <label>Primary Contact</label>
+                  <input class="form-control" value="(832)-555-5555" type="text" readonly/>
+                </div>
+                <div class="col-xs-1 form-group">
+                  <label>Type</label>
+                  <input class="form-control" value="Cell" type="text"/>
+                </div>
+                <div class="col-xs-3 form-group">
+                  <label>Secondary Contact</label>
+                  <input class="form-control" value="(713)-555-5555" type="text"/>
+                </div>
+                <div class="col-xs-1 form-group">
+                  <label>Type</label>
+                  <input class="form-control" value="Work" type="text"/>
+                </div>
               </div>
-              <div class="col-xs-2 form-group">
-                <label>Check In</label>
-                <input class="form-control" placeholder="9:00 AM" type="text"/>
+              <br>
+              <div class="row">
+                <label>Reason for Visist</label>
+                <textarea class="form-control" rows="5">New Patient Physical.</textarea>
               </div>
-              <div class="col-xs-2 form-group">
-                <label>Appt Time</label>
-                <input class="form-control" placeholder="9:15 AM" type="text"/>
-              </div>
-              <div class="col-xs-2 form-group">
-                <label>Doctor</label>
-                <input class="form-control" placeholder="Michaliszyn" type="text"/>
-              </div>
-              <div class="col-xs-1 form-group">
-                <label>New</label>
-                <input class="form-control" placeholder="Yes" type="text"/>
-              </div>
+            <div class="frame" style="border: 0px; float: right">
+              <a href="#" class="btn btn-lg btn-primary btn-block" onclick="hide('detail1')">Verify</a>
             </div>
-            <div class="row">
-              <div class="col-xs-4 form-group">
-                <label>Address</label>
-                <input class="form-control" placeholder="1347 First Street Conroe, TX 77304" type="text"/>
-              </div>
-              <div class="col-xs-3 form-group">
-                <label>Primary Contact</label>
-                <input class="form-control" placeholder="(832)-555-5555" type="text"/>
-              </div>
-              <div class="col-xs-1 form-group">
-                <label>Type</label>
-                <input class="form-control" placeholder="Cell" type="text"/>
-              </div>
-              <div class="col-xs-3 form-group">
-                <label>Secondary Contact</label>
-                <input class="form-control" placeholder="(713)-555-5555" type="text"/>
-              </div>
-              <div class="col-xs-1 form-group">
-                <label>Type</label>
-                <input class="form-control" placeholder="Work" type="text"/>
-              </div>
             </div>
-            <br>
-            <div class="row">
-              <label>Reason for Visist</label>
-              <textarea class="form-control" rows="5" placeholder="New Patient Physical"></textarea>
-            </div>
-          <div class="frame" style="border: 0px; float: right">
-          <a href="#" class="btn btn-lg btn-primary btn-block" onclick="hide('detail1')">Verify</a>
           </div>
         </div>
-        </div>
-    </div>
     </body>
     <script>
     $ = function(id) {
@@ -163,7 +163,7 @@
     }
     function resetTimer() {
         clearTimeout(t);
-        t = setTimeout(logout, 10000);  // time is in milliseconds (1000 is 1 second)
+        t = setTimeout(logout, 3600000);  // time is in milliseconds (1000 is 1 second)
     }
     }
 idleTimer();
