--- a/templates/Employee/checkin.html
+++ b/templates/Employee/checkin.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-xs-1 form-group">
                   <label>New</label>
-                  <input class="form-control" placeholder="Yes" type="text" readonly/>
+                  <input class="form-control" value="Yes" type="text" readonly/>
                 </div>
               </div>
               <div class="row">
